--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
     <title>Helen Zheng - Resume</title>
 
     <!-- Update Description -->
-    <meta name="description" content="Jonathan Lewis - Resume" />
+    <meta name="description" content="Helen Zheng - Resume" />
 
     <!-- Custom Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -23,20 +23,22 @@
     />
 
     <!-- Main CSS -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"
+    />
+
   </head>
   <body>
     <main class="bg-white text-gray-800 min-h-screen">
       <div class="py-20 lg:py-24 px-6 mx-auto max-w-7xl">
         <div class="relative">
           <!-- Your Name -->
-          <h1>Jonathan Lewis</h1>
+          <h1>Helen Zheng</h1>
 
           <div
             class="relative grid grid-cols-1 lg:grid-cols-4 gap-10 xl:gap-24 z-10"
           >
             <!-- Your Title -->
-            <h2>Professional Title</h2>
+            <h2>Student</h2>
 
             <div
               class="lg:flex lg:justify-between grid-3 xl:grid-3 lg:col-span-3 gap-4 mt-5 pt-4 border-t-2 border-gray-300"
@@ -63,11 +65,11 @@
                   <p class="mb-0 font-semibold text-sm">Email</p>
                   <p class="mb-0">
                     <a
-                      href="mailto:support@resumewind.com"
+                      href="mailto:hzheng2001@gmail.com"
                       target="_blank"
                       rel="noreferrer"
                     >
-                      support@resumewind.com
+                      hzheng2001@gmail.com
                     </a>
                   </p>
                 </div>
@@ -95,11 +97,11 @@
                   <p class="mb-0 font-semibold text-sm">GitHub</p>
                   <p class="mb-0">
                     <a
-                      href="https://github.com/username"
+                      href="https://github.com/Helzheng123"
                       target="_blank"
                       rel="noreferrer"
                     >
-                      github.com/username
+                    github.com/Helzheng123
                     </a>
                   </p>
                 </div>
@@ -124,14 +126,14 @@
 
                 <!-- Contact 3 -->
                 <div class="ml-3">
-                  <p class="mb-0 font-semibold text-sm">Website</p>
+                  <p class="mb-0 font-semibold text-sm">LinkedIn</p>
                   <p class="mb-0">
                     <a
-                      href="https://resumewind.com"
+                      href="https://www.linkedin.com/in/helen-zheng/"
                       target="_blank"
                       rel="noreferrer"
                     >
-                      resumewind.com
+                    linkedin.com/in/helen-zheng
                     </a>
                   </p>
                 </div>
@@ -152,43 +154,34 @@
             <div class="grid-3 gap-x-6">
               <div>
                 <!-- Company 1 -->
-                <h4 class="mb-1 lg:mb-4">Company Name 1</h4>
+                <h4 class="mb-1 lg:mb-4">Garden City Heart Center</h4>
                 <p class="text-sm mb-1">
                   <a
-                    href="https://resumewind.com/"
+                    href="https://gardencityheart.com/"
                     target="_blank"
                     rel="noreferrer"
                   >
-                    companywebsite.com
+                  gardencityheart.com
                   </a>
                 </p>
-                <p class="text-sm">Sept. 2021 - Present</p>
+                <p class="text-sm">Dec. 2022- Jan 2023</p>
               </div>
 
               <div class="lg:col-span-2">
                 <!-- Job Title 1 -->
-                <h4 class="mb-4">Job Title 1</h4>
+                <h4 class="mb-4">Medical Assistant Intern</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Integer a imperdiet urna. Praesent eu posuere magna, in
-                  suscipit quam. Here is an example of an
+                    Assist by prepping patients for cardiovascular procedures, accurately recording heart test results, applying Holter monitors to patients, taking electrocardiograms, and educating patients on medications and nutrition. Here is an example of an
                   <a
-                    href="https://resumewind.com/"
+                    href="https://gardencityheart.com/"
                     target="_blank"
                     rel="noreferrer"
                     >external link</a
                   >.
                 </p>
-                <p>
-                  Mauris ullamcorper neque in ultrices mollis. Sed justo eros,
-                  mollis sed odio id, finibus gravida enim. Aenean pharetra ante
-                  elit, sit amet accumsan felis suscipit vitae. Vestibulum ante
-                  ipsum primis.
-                </p>
                 <ul>
-                  <li>Cras in erat bibendum, rhoncus nisl ac, luctus tortor</li>
-                  <li>Vivamus volutpat nunc non quam dapibus</li>
-                  <li>Nulla molestie odio odio, ut congue dui</li>
+                  <li>Perform and record electrocardiograms, ankle brachial index, and Holter monitors</li>
+                  <li>Communicate clearly and effectively with patients for clerical duties</li>
                 </ul>
               </div>
             </div>
@@ -197,43 +190,22 @@
             <div class="grid-3 gap-x-6 mt-8 lg:mt-12">
               <div>
                 <!-- Company 2 -->
-                <h4 class="mb-1 lg:mb-4">Company Name 2</h4>
+                <h4 class="mb-1 lg:mb-4">Human Anatomy Lab Undergraduate Teaching Assistant</h4>
                 <p class="text-sm mb-1">
-                  <a
-                    href="https://resumewind.com/"
-                    target="_blank"
-                    rel="noreferrer"
-                  >
-                    companywebsite.com
-                  </a>
                 </p>
-                <p class="text-sm">Oct. 2019 - Sept. 2021</p>
+                <p class="text-sm">Jan. 2022 - Dec. 2022</p>
               </div>
 
               <div class="lg:col-span-2">
                 <!-- Job Title 2 -->
-                <h4 class="mb-4">Job Title 2</h4>
+                <h4 class="mb-4">Undergraduate Teaching Assistant</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Integer a imperdiet urna. Praesent eu posuere magna, in
-                  suscipit quam. Here is an example of an
-                  <a
-                    href="https://resumewind.com/"
-                    target="_blank"
-                    rel="noreferrer"
-                    >external link</a
-                  >.
-                </p>
-                <p>
-                  Mauris ullamcorper neque in ultrices mollis. Sed justo eros,
-                  mollis sed odio id, finibus gravida enim. Aenean pharetra ante
-                  elit, sit amet accumsan felis suscipit vitae. Vestibulum ante
-                  ipsum primis.
+                    Assist the instructor in teaching the 3-hour A&P labs.  Help with any set up or take down/cleaning of the lab that is necessary, preparing practice practical exams for the students, and mostly aiding the students in learning the material, troubleshooting physiological equipment setups, and other tasks needed during the teaching of the labs.
                 </p>
                 <ul>
-                  <li>Cras in erat bibendum, rhoncus nisl ac, luctus tortor</li>
-                  <li>Vivamus volutpat nunc non quam dapibus</li>
-                  <li>Nulla molestie odio odio, ut congue dui</li>
+                  <li>Teach the class the topic of human facial muscles</li>
+                  <li>Cooperate with the lab instructor in managing the lectures, lab setting, and models</li>
+                  <li>Manage a lab room of 16 students and help students in problem-solving for lab activities</li>
                 </ul>
               </div>
             </div>
@@ -242,43 +214,32 @@
             <div class="grid-3 mt-8 lg:mt-12">
               <div>
                 <!-- Company 3 -->
-                <h4 class="mb-1 lg:mb-4">Company Name 3</h4>
+                <h4 class="mb-1 lg:mb-4">Energize Physical Therapy</h4>
                 <p class="text-sm mb-1">
                   <a
-                    href="https://resumewind.com/"
+                    href="https://www.energizept.net/"
                     target="_blank"
                     rel="noreferrer"
                   >
-                    companywebsite.com
+                  energizept.net
                   </a>
                 </p>
-                <p class="text-sm">Jan. 2016 - Oct. 2019</p>
+                <p class="text-sm">Summer 2021</p>
+                <p class="text-sm">Winter 2022 & 2023</p>
               </div>
 
               <div class="lg:col-span-2">
                 <!-- Job Title 3 -->
-                <h4 class="mb-4">Job Title 3</h4>
+                <h4 class="mb-4">Physical Therapy Aide</h4>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                  Integer a imperdiet urna. Praesent eu posuere magna, in
-                  suscipit quam. Here is an example of an
-                  <a
-                    href="https://resumewind.com/"
-                    target="_blank"
-                    rel="noreferrer"
-                    >external link</a
-                  >.
+                  Supports physical therapy care delivery by preparing treatment area, patient, equipment, and materials, and performs procedures under the supervision of a physical therapist or physical therapy assistant. Provides information to patients by answering questions and requests and allaying fears. Helps treat patients by applying ice packs and paraffin dips, helping patients onto exercise equipment, monitoring motion, measuring mobility, and performing prescribed exercises and strengthening techniques.
                 </p>
-                <p>
-                  Mauris ullamcorper neque in ultrices mollis. Sed justo eros,
-                  mollis sed odio id, finibus gravida enim. Aenean pharetra ante
-                  elit, sit amet accumsan felis suscipit vitae. Vestibulum ante
-                  ipsum primis.
-                </p>
+                <p>Educates patients by demonstrating proper use of equipment and exercise routines. Maintains patient confidence and protects operations by keeping information confidential. Provides equipment and supplies by sterilizing and delivering equipment and supplies to treatment area, positioning equipment for therapist access, and positioning patient on equipment.
                 <ul>
-                  <li>Cras in erat bibendum, rhoncus nisl ac, luctus tortor</li>
-                  <li>Vivamus volutpat nunc non quam dapibus</li>
-                  <li>Nulla molestie odio odio, ut congue dui</li>
+                  <li>Disinfected treatment tables and maintained the cleanliness of therapeutic equipment</li>
+                  <li>Instructed and motivated patients in practicing exercises and other functional activities</li>
+                  <li>Set up patients with ice packs, paraffin wax, Normatec, neck massager, and stationary bike</li>
+                  <li>Assisted in documenting patient progress through flowsheets</li>
                 </ul>
               </div>
             </div>
@@ -288,9 +249,7 @@
             <!-- Profile -->
             <h3>Profile</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-              semper sapien ligula, vestibulum eleifend erat pellentesque quis.
-              Suspendisse potenti. Mauris et malesuada nisl, eu tempus nisi.
+            Skills lie in customer service, time management abilities and strong knowledge of office safety procedures. Searching for a hospital or start-up technology company to apply knowledge gained from experience in the medical field to operate a well-run office.
             </p>
 
             <!-- Skills -->
@@ -299,10 +258,9 @@
             <!-- Skills 1 -->
             <h4>Programming Languages</h4>
             <ul>
-              <li>JavaScript</li>
-              <li>TypeScript</li>
               <li>Python</li>
-              <li>PHP</li>
+              <li>Javascript</li>
+              <li>SQL</li>
             </ul>
 
             <!-- Skills 2 -->
@@ -316,19 +274,21 @@
 
             <!-- Education -->
             <h3 class="mt-12 lg:mt-16">Education</h3>
-            <h4 class="mb-1">Name Of University</h4>
-            <p class="mb-1">Enter Your Degree</p>
+            <h4 class="mb-1">Stony Brook University</h4>
+            <p class="mb-1">Bachelor in Health Science with a Concentration in Health Care Informatics</p>
+            
+            <p class="mb-1">Minor in Chemistry</p>
 
             <!-- References -->
             <h3 class="mt-12 lg:mt-16">References</h3>
 
             <!-- Reference 1 -->
-            <h4 class="mb-1">Reference Name 1</h4>
-            <p>Reference Title 1</p>
+            <h4 class="mb-1">Sharon A. Cuff, LMSW</h4>
+            <p>Clinical Associate Professor</p>
 
             <!-- Reference 2 -->
-            <h4 class="mt-8 mb-1">Reference Name 2</h4>
-            <p class="mb-1">Reference Title 2</p>
+            <h4 class="mt-8 mb-1">Patrick Lyo, DPT, CAFS</h4>
+            <p class="mb-1">Physical Therapist</p>
           </div>
         </div>
       </div>
